# easyergo

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
easyergo/: cli.py  server.py  tsparser.py
examples/: UCX-CUDA-1.15.0-GCCcore-13.2.0-CUDA-11.3.1.eb
exts/vscode/: package-lock.json  package.json
exts/vscode/src/: extension.ts
src/: cli.py  easyergo.py
